# dossiergap

./: .gitignore  PHASE1-PLAN.md  PHASE2-PLAN.md  README.md  provenance.json  pyproject.toml
data/: cardiology-nme-corpus.json
docs/: corpus-criteria.md  index.html  pivotal-criterion.md
docs/dashboard/: index.html
manuscript/: e156.md  figure1.mmd  joss-paper.md  methods-paper.md  paper.bib
outputs/: extraction_audit.md
scripts/: preflight.py
src/dossiergap/: __init__.py  __main__.py  corpus.py  dedup.py  pipeline.py  schema.py
src/dossiergap/download/: __init__.py  _common.py  ema.py  fda.py  url_discovery.py
src/dossiergap/io/: __init__.py  csv_writer.py
src/dossiergap/parse/: __init__.py  _common_extract.py  ema_sections.py  ema_trials.py  fda_sections.py  fda_trials.py
tests/: conftest.py  test_corpus.py  test_csv_writer.py  test_dedup.py  test_download_ema.py  test_download_fda.py  test_fda_sections_otherr_cluster.py  test_hr_scoring.py  test_indication_classifier.py  test_no_silent_failure.py  test_outcome_scoring.py  test_parse_ema_sections.py  test_parse_ema_trials.py  test_parse_fda_sections.py  test_parse_fda_trials.py  test_pipeline.py  test_preflight.py  test_scaffold.py  test_schema.py  test_url_discovery.py
