[project]
name = "dossiergap"
version = "0.1.0"
description = "FDA/EMA dossier pivotal-trial publication-gap audit for cardiology NMEs 2015-2025"
requires-python = ">=3.13"
dependencies = [
    "pdfplumber>=0.11",
    "requests>=2.31",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
